# jack813-mlx-chroma

./: .gitignore  README.md  app.py  inference.py  main.py  pyproject.toml  requirements.txt  txt2image.py
chroma/: __init__.py  autoencoder.py  chroma.py  chromalayers.py  chromamodel.py  chromasampler.py  lora.py  tokenizers.py  utils.py
